--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "npm run -n \"-r dotenv/config\" && npm run build && gatsby-plugin-s3 deploy"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^8.6.0",
     "gatsby": "^3.6.2",
     "gatsby-plugin-google-analytics": "^3.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-sitemap": "^4.3.1",
     "gatsby-plugin-styled-components": "^4.7.1",
@@ -30,5 +33,12 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "gatsby-plugin-postcss": "^4.7.1",
+    "postcss": "^8.3.2",
+    "tailwind-styled-components": "^2.0.3",
+    "tailwindcss": "^2.1.4"
   }
 }
