--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.6.0",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-canonical-urls": "^3.7.1",
     "gatsby-plugin-google-analytics": "^3.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
