--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
-  "tailwindCSS.includeLanguages": {
-    "typescript": "javascript", // if you are using typescript
-    "typescriptreact": "javascript" // if you are using typescript with react
-  },
+  "scss.validate": false,
   "editor.quickSuggestions": {
-    "strings": true // forces VS Code to trigger completions when editing "string" content
+    "strings": true
   },
+  "editor.autoClosingQuotes": "always",
   "tailwindCSS.experimental.classRegex": [
     "tw`([^`]*)", // tw`...`
-    "tw\\..+`([^`]*)", // tw.xxx<xxx>`...`
-    "tw\\(.*?\\).*?`([^`]*)" // tw(Component)<xxx>`...`
-  ]
+    "tw='([^']*)", // <div tw="..." />
+    "tw={'([^'}]*)", // <div tw={"..."} />
+    "tw\\.\\w+`([^`]*)", // tw.xxx`...`
+    "tw\\(.*?\\)`([^`]*)" // tw(Component)`...`
+  ],
+  "tailwindCSS.includeLanguages": {
+    "typescript": "javascript",
+    "typescriptreact": "javascript"
+  }
 }
