--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-tsparticles": "^1.31.1",
     "styled-components": "^5.3.0",
+    "tsparticles": "^1.31.1",
     "twin.macro": "^2.5.0"
   },
   "devDependencies": {
